add larger csvs, edit models

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -476,14 +476,16 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Randomly sample the dataframe without replacement to reduce dataset size.\n",
-    "sample_size = 25000\n",
+    "# sample_size = 25000\n",
+    "# sample_size = 50000\n",
+    "sample_size = 100000\n",
     "sample_df = df.sample(n=sample_size, replace=False, random_state=1, ignore_index=True)\n",
     "\n",
     "# Display the sampled dataframe.\n",
@@ -492,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +667,7 @@
        "4             108.86             Yes  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -726,43 +728,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>0.113974</td>\n",
-       "      <td>-0.025174</td>\n",
-       "      <td>-0.061718</td>\n",
-       "      <td>1.404549</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>0.103781</td>\n",
+       "      <td>-0.014655</td>\n",
+       "      <td>-0.054821</td>\n",
+       "      <td>1.397738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>-0.508455</td>\n",
-       "      <td>0.674879</td>\n",
-       "      <td>1.619866</td>\n",
-       "      <td>0.760563</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>-0.515270</td>\n",
+       "      <td>0.683217</td>\n",
+       "      <td>1.634413</td>\n",
+       "      <td>0.757997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>-0.508455</td>\n",
-       "      <td>-0.725227</td>\n",
-       "      <td>-0.528825</td>\n",
-       "      <td>0.116577</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>-0.515270</td>\n",
+       "      <td>-0.712528</td>\n",
+       "      <td>-0.524053</td>\n",
+       "      <td>0.118256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>-0.508455</td>\n",
-       "      <td>0.674879</td>\n",
-       "      <td>0.872496</td>\n",
-       "      <td>-0.097769</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>-0.515270</td>\n",
+       "      <td>0.683217</td>\n",
+       "      <td>0.883642</td>\n",
+       "      <td>-0.094678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>-0.508455</td>\n",
-       "      <td>-0.025174</td>\n",
-       "      <td>0.685653</td>\n",
-       "      <td>1.189729</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>-0.515270</td>\n",
+       "      <td>-0.014655</td>\n",
+       "      <td>0.695949</td>\n",
+       "      <td>1.184334</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -770,21 +772,21 @@
       ],
       "text/plain": [
        "   PhysicalHealthDays  MentalHealthDays  SleepHours  HeightInMeters  \\\n",
-       "0            -0.48774          0.113974   -0.025174       -0.061718   \n",
-       "1            -0.48774         -0.508455    0.674879        1.619866   \n",
-       "2            -0.48774         -0.508455   -0.725227       -0.528825   \n",
-       "3            -0.48774         -0.508455    0.674879        0.872496   \n",
-       "4            -0.48774         -0.508455   -0.025174        0.685653   \n",
+       "0           -0.488652          0.103781   -0.014655       -0.054821   \n",
+       "1           -0.488652         -0.515270    0.683217        1.634413   \n",
+       "2           -0.488652         -0.515270   -0.712528       -0.524053   \n",
+       "3           -0.488652         -0.515270    0.683217        0.883642   \n",
+       "4           -0.488652         -0.515270   -0.014655        0.695949   \n",
        "\n",
        "   WeightInKilograms  \n",
-       "0           1.404549  \n",
-       "1           0.760563  \n",
-       "2           0.116577  \n",
-       "3          -0.097769  \n",
-       "4           1.189729  "
+       "0           1.397738  \n",
+       "1           0.757997  \n",
+       "2           0.118256  \n",
+       "3          -0.094678  \n",
+       "4           1.184334  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1062,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1132,11 +1134,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>0.113974</td>\n",
-       "      <td>-0.025174</td>\n",
-       "      <td>-0.061718</td>\n",
-       "      <td>1.404549</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>0.103781</td>\n",
+       "      <td>-0.014655</td>\n",
+       "      <td>-0.054821</td>\n",
+       "      <td>1.397738</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1156,11 +1158,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>-0.508455</td>\n",
-       "      <td>0.674879</td>\n",
-       "      <td>1.619866</td>\n",
-       "      <td>0.760563</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>-0.515270</td>\n",
+       "      <td>0.683217</td>\n",
+       "      <td>1.634413</td>\n",
+       "      <td>0.757997</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1180,11 +1182,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>-0.508455</td>\n",
-       "      <td>-0.725227</td>\n",
-       "      <td>-0.528825</td>\n",
-       "      <td>0.116577</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>-0.515270</td>\n",
+       "      <td>-0.712528</td>\n",
+       "      <td>-0.524053</td>\n",
+       "      <td>0.118256</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1204,11 +1206,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>-0.508455</td>\n",
-       "      <td>0.674879</td>\n",
-       "      <td>0.872496</td>\n",
-       "      <td>-0.097769</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>-0.515270</td>\n",
+       "      <td>0.683217</td>\n",
+       "      <td>0.883642</td>\n",
+       "      <td>-0.094678</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1228,11 +1230,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.48774</td>\n",
-       "      <td>-0.508455</td>\n",
-       "      <td>-0.025174</td>\n",
-       "      <td>0.685653</td>\n",
-       "      <td>1.189729</td>\n",
+       "      <td>-0.488652</td>\n",
+       "      <td>-0.515270</td>\n",
+       "      <td>-0.014655</td>\n",
+       "      <td>0.695949</td>\n",
+       "      <td>1.184334</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1257,18 +1259,18 @@
       ],
       "text/plain": [
        "   PhysicalHealthDays  MentalHealthDays  SleepHours  HeightInMeters  \\\n",
-       "0            -0.48774          0.113974   -0.025174       -0.061718   \n",
-       "1            -0.48774         -0.508455    0.674879        1.619866   \n",
-       "2            -0.48774         -0.508455   -0.725227       -0.528825   \n",
-       "3            -0.48774         -0.508455    0.674879        0.872496   \n",
-       "4            -0.48774         -0.508455   -0.025174        0.685653   \n",
+       "0           -0.488652          0.103781   -0.014655       -0.054821   \n",
+       "1           -0.488652         -0.515270    0.683217        1.634413   \n",
+       "2           -0.488652         -0.515270   -0.712528       -0.524053   \n",
+       "3           -0.488652         -0.515270    0.683217        0.883642   \n",
+       "4           -0.488652         -0.515270   -0.014655        0.695949   \n",
        "\n",
        "   WeightInKilograms  Sex_Male  \\\n",
-       "0           1.404549         0   \n",
-       "1           0.760563         1   \n",
-       "2           0.116577         0   \n",
-       "3          -0.097769         1   \n",
-       "4           1.189729         1   \n",
+       "0           1.397738         0   \n",
+       "1           0.757997         1   \n",
+       "2           0.118256         0   \n",
+       "3          -0.094678         1   \n",
+       "4           1.184334         1   \n",
        "\n",
        "   LastCheckupTime_Within past 2 years (1 year but less than 2 years ago)  \\\n",
        "0                                                  0                        \n",
@@ -1329,7 +1331,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,12 +1345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the preprocessed data as a csv.\n",
-    "cleaned_df.to_csv('processed_data.csv')"
+    "# cleaned_df.to_csv('processed_data.csv')\n",
+    "# cleaned_df.to_csv('processed_data_50k.csv')\n",
+    "cleaned_df.to_csv('processed_data_100k.csv')"
    ]
   }
  ],
