--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -675,6 +675,140 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Tree with 100,000 records."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the processed data.\n",
+    "df = pd.read_csv('processed_data_100k.csv')\n",
+    "df = df.drop(['Unnamed: 0'], axis=1)\n",
+    "\n",
+    "# Assign HadHeartAttack_Yes as target variable.\n",
+    "y = df.HadHeartAttack_Yes.values\n",
+    "X = df.drop(columns=\"HadHeartAttack_Yes\").values\n",
+    "\n",
+    "# Split training/test datasets.\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>23387</td>\n",
+       "      <td>245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>1076</td>\n",
+       "      <td>292</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Predicted 0  Predicted 1\n",
+       "Actual 0        23387          245\n",
+       "Actual 1         1076          292"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Score : 0.94716\n",
+      "Classification Report\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.99      0.97     23632\n",
+      "           1       0.54      0.21      0.31      1368\n",
+      "\n",
+      "    accuracy                           0.95     25000\n",
+      "   macro avg       0.75      0.60      0.64     25000\n",
+      "weighted avg       0.93      0.95      0.94     25000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a random forest classifier\n",
+    "rf_model = RandomForestClassifier(n_estimators=1500, \n",
+    "                                  random_state=1, \n",
+    "                                  max_leaf_nodes=250, \n",
+    "                                  max_features= 50)\n",
+    "\n",
+    "# Fitting the model\n",
+    "rf_model = rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Making predictions using the testing data\n",
+    "predictions = rf_model.predict(X_test)\n",
+    "\n",
+    "# Calculating the confusion matrix\n",
+    "cm = confusion_matrix(y_test, predictions)\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"]\n",
+    ")\n",
+    "\n",
+    "# Calculating the accuracy score\n",
+    "acc_score = accuracy_score(y_test, predictions)\n",
+    "\n",
+    "# Displaying results\n",
+    "print(\"Confusion Matrix\")\n",
+    "display(cm_df)\n",
+    "print(f\"Accuracy Score : {acc_score}\")\n",
+    "print(\"Classification Report\")\n",
+    "print(classification_report(y_test, predictions))"
+   ]
   }
  ],
  "metadata": {
